--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3910,38 +3910,34 @@ input, select, textarea {
 
 
 		/* modal */
-		.modal {
-			display: none; 
-			position: fixed; 
-			z-index: 1; 
-			left: 0;
-			top: 0;
-			width: 100%; 
-			height: 100%; 
-			overflow: auto; 
-			background-color: rgba(0, 0, 0, 0.5); 
-		  }
-		  
-		  .modal-content {
-			background-color: #fff;
-			margin: 15% auto; 
-			padding: 20px;
-			border: 1px solid #888;
-			width: 80%; 
-			max-width: 400px;
-			text-align: center;
-		  }
-		  
-		  .close {
-			color: #aaa;
-			float: right;
-			font-size: 28px;
-			font-weight: bold;
-		  }
-		  
-		  .close:hover,
-		  .close:focus {
-			color: black;
-			text-decoration: none;
-			cursor: pointer;
-		  }
+		/* Modal */
+#successModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    background-color: #312450; /* Dark background */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    color: #ffffff; /* White text */
+    text-align: center;
+}
+
+#successModal .close {
+    color: #ffffff;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#successModal .close:hover,
+#successModal .close:focus {
+    color: #ff0000;
+    text-decoration: none;
+    cursor: pointer;
+}
